plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.16.1'
}

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/resources"]
        }
    }
}

group 'com.sohocn'
version '1.0.5'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.12.1'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.2'
    compileOnly("org.projectlombok:lombok:1.18.30")
    annotationProcessor("org.projectlombok:lombok:1.18.36")
}

intellij {
    version = '2023.3.3'
    type = 'IU'
    plugins = ['com.intellij.java', 'org.intellij.plugins.markdown']
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks {
    patchPluginXml {
        sinceBuild = '231'
        untilBuild = '243.*'
    }

    signPlugin {
        certificateChain = System.getenv('CERTIFICATE_CHAIN')
        privateKey = System.getenv('PRIVATE_KEY')
        password = System.getenv('PRIVATE_KEY_PASSWORD')
    }

    publishPlugin {
        token = System.getenv('PUBLISH_TOKEN')
    }
} 